--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,10 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  branches:
+      include:
+      - master
+      - releases/*
 
 pool:
   vmImage: 'ubuntu-latest'
