--- a/Aks/Modules/AKS/Dashboard/service-account/role-binding.yaml
+++ b/Aks/Modules/AKS/Dashboard/service-account/role-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: dixi-admin
+  name: pngo-admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: dixi-admin
+  name: pngo-admin
   namespace: kube-system
